@@ -144,7 +144,7 @@ Data(ap, type, d, c)
 {
         unsigned char *p = str_data + 4;
 	const unsigned char *cd = (const unsigned char *)d;
-
+	size_t spaceleft = sizeof(str_data)-4;
 	if (c == -1)
 		c = strlen((const char *)cd);
 
@@ -159,9 +159,17 @@ Data(ap, type, d, c)
 	*p++ = ap->type;
 	*p++ = ap->way;
 	*p++ = type;
+	spaceleft -= 3;
         while (c-- > 0) {
-                if ((*p++ = *cd++) == IAC)
-                        *p++ = IAC;
+if ((*p++ = *cd++) == IAC) {
+*p++ = IAC;
+spaceleft--;
+}
+if (--spaceleft <= 4) {
+errno = ENOMEM;
+return -1;
+}
+
         }
         *p++ = IAC;
         *p++ = SE;
